# kankerwijzer

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  PRESENTATION.md  README.md  SECURITY.md  docker-compose.yml  evalSet.txt  pitch.html  test_prompts.txt
.github/: pull_request_template.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  feedback.py  lastmeter.py  main.py  models.py  source_registry.py  verification.py
backend/app/agent/: orchestrator.py
backend/app/connectors/: base.py  docling_parser.py  firecrawl_client.py  iknl.py  kanker_nl.py  kankeratlas.py  nkr_cijfers.py  publications.py  richtlijnendatabase.py
backend/app/graphrag/: __main__.py  builder.py  retriever.py
backend/app/ingestion/: chunker.py  pdf_manifest.py  pipeline.py  postgres_writer.py
backend/app/ingestion/output/: ingestion_summary.json
backend/app/retrieval/: hybrid.py  simple.py
backend/app/safety/: abstention.py  red_flags.py  source_policy.py
backend/app/storage/: feedback_migration.sql  init.sql  neo4j_schema.cypher  postgres_schema.sql
backend/app/vectorstore/: embedder.py  indexer.py  qdrant_store.py
backend/eval/: golden_questions.yaml  improved_questionnaire_v2.yaml
backend/eval/results/: eval_report.json
backend/scripts/: fetch_source_examples.py  run_eval.py  run_improved_questionnaire_eval.py  verify_all_sources.py
backend/tests/: test_app_api.py  test_config.py  test_eval_questionnaire.py  test_local_search.py  test_medical_grade_safety.py  test_red_flags.py
(+42 files in other folders)
